Registrado funcionando y Login

--- a/GrupoA-war/web/WEB-INF/templates/plantillaMonitor.xhtml
+++ b/GrupoA-war/web/WEB-INF/templates/plantillaMonitor.xhtml
@@ -25,18 +25,18 @@
             <div class="container-fluid">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <h:button class="nav-link" value="Seccion" outcome="inicio.xhtml"/>
+                        <h:button class="nav-link" value="Seccion" outcome="inicioM.xhtml"/>
                     </li>
                     <li class="nav-item">
-                        <h:button class="nav-link" value="Documentos" outcome="verDocumentos.xhtml"/>
+                        <h:button class="nav-link" value="Documentos" outcome="verDocumentosM.xhtml"/>
                     </li>
-                    <li class="nav-item">
-                        <h:button class="nav-link" value="Mi eventos" outcome="verMisEventos.xhtml"/>
-                    </li> 
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="nav-item">
-                        <h:button class="nav-link" value="Mi perfil" outcome="miPerfil.xhtml"/>                 
+                        <h:button class="nav-link" value="Nuevo Evento" outcome="crearEvento.xhtml"/>                 
+                    </li>
+                    <li class="nav-item">
+                        <h:button class="nav-link" value="Mi perfil" outcome="miPerfilM.xhtml"/>                 
                     </li>
                     <li class="nav-item">
                         <h:button class="nav-link" value="Logout" outcome="login.xhtml"/>                 
